--- a/historia.html
+++ b/historia.html
@@ -15,26 +15,18 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="vinos.html">Vinos</a></li>
                 <li><a href="historia.html">Historia</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+                <li><a href="preguntas-frecuentes.html">Preguntas</a></li>
             <div id="menu-icon" class="menu-hamburguesa"><i class="fas fa-bars"></i></div>
         </nav>
-                <!-- Menú hamburguesa desplegable -->
-                <div class="menu-desplegable" id="menu-desplegable">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="vinos.html">Vinos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="historia.html">Historia</a></li>
-                    </ul>
     </header>
 
     <main class="todo">
         <section class="info">
             <h1 class="alineado-izquierda">Nuestra Historia</h1>
-            <p>Conoce los orígenes y la pasión detrás de Cata & Aroma.</p>
-            <p>Desde nuestros comienzos, nos hemos comprometido a ofrecer una experiencia única en cada copa.</p>
+            <p>En Cata & Aroma, la pasión por el vino no es solo un legado, sino un arte que hemos perfeccionado a lo largo de los años. Nuestro proyecto nació con el sueño de crear una experiencia única para los amantes del buen vino, un lugar donde cada copa no solo represente una bebida, sino también un viaje a las raíces de la tierra, el trabajo del viñedo y la magia de la bodega. Desde el inicio, nos propusimos seleccionar cuidadosamente etiquetas que combinen tradición y modernidad, vinos que cuenten historias a través de sus aromas y sabores.</p>
+            <p>Nuestro compromiso con la calidad y el detalle nos llevó a recorrer los valles y bodegas más emblemáticos de la región, dialogando con enólogos y viticultores que comparten nuestra filosofía: el vino no se produce, se vive. Cada botella que llega a nuestras manos es una obra de arte, una expresión de su origen, de las personas que la crearon y de la tierra que la vio nacer.</p>
+            <p>En Cata & Aroma, creemos que el vino tiene el poder de unir personas, celebrar momentos y transformar lo cotidiano en extraordinario. Es por eso que no solo ofrecemos vinos, sino experiencias memorables. Ya sea compartiendo una velada íntima, celebrando un logro o simplemente disfrutando de un instante de calma, queremos que cada copa sea el reflejo de nuestra pasión y tu felicidad. Porque al final del día, nuestra historia está escrita en cada etiqueta, y nuestra misión es invitarte a descubrirla, un sorbo a la vez.</p>
         </section>
     </main>
 
@@ -65,5 +57,8 @@
             <small>&copy; 2024 <b>Cata & Aroma</b> - Todos los derechos reservados.</small>
         </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
+
+
