--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vinos - Cata & Aroma</title>
+  <title>Preguntas Frecuentes - Cata & Aroma</title>
   <link rel="stylesheet" href="./css/style.css">
   <script src="https://kit.fontawesome.com/aa7493e7b0.js" crossorigin="anonymous"></script>
 </head>
@@ -23,41 +23,29 @@
   </header>
 
   <main class="todo">
-    <!-- Banner del título -->
-    <section class="info">
-      <h1>Nuestros Vinos</h1>
-      <p>Explora la selección de vinos que definen el alma de nuestra vinoteca.</p>
-    </section>
     
-    <!-- Sección de Vinos -->
-    <section class="vinos-galeria">
-      <div class="vino">
-        <figure>
-          <img src="img/rutini.webp" alt="Vino Tinto Reserva">
-          <figcaption>Rutini Malbec</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+    <section class="info">
+      <h1>Preguntas Frecuentes</h1>
+      <p>Encuentra respuestas a las dudas más comunes sobre nuestra vinoteca y productos.</p>
+    </section>
+
+    
+    <section class="preguntas-frecuentes">
+      <div class="p-f">
+        <h3>¿Realizan envíos a todo el país?</h3>
+        <p>Sí, realizamos envíos a todo el territorio nacional con un embalaje seguro para garantizar la calidad de los productos.</p>
       </div>
-      <div class="vino">
-        <figure>
-          <img src="img/elenemigo.webp" alt="y">
-          <figcaption>El Enemigo Malbec</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+      <div class="p-f">
+        <h3>¿Cuánto tarda en llegar un pedido?</h3>
+        <p>El tiempo de entrega depende de la región. En general, los envíos se realizan entre 3 a 7 días hábiles.</p>
       </div>
-      <div class="vino">
-        <figure>
-          <img src="img/sf.webp" alt="">
-          <figcaption>Saint Felicien</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+      <div class="p-f">
+        <h3>¿Qué métodos de pago aceptan?</h3>
+        <p>Aceptamos tarjetas de crédito, débito, transferencias bancarias y pagos a través de plataformas digitales como MercadoPago.</p>
       </div>
-      <div class="vino">
-        <figure>
-          <img src="img/dv-catena.webp" alt="">
-          <figcaption>DV Catena Zapata</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+      <div class="p-f">
+        <h3>¿Cómo almacenar correctamente los vinos?</h3>
+        <p>Se recomienda almacenarlos en un lugar fresco y oscuro, con una temperatura constante de entre 12 y 18 °C.</p>
       </div>
     </section>
   </main>
@@ -90,6 +78,3 @@
   <script src="./js/menu.js"></script>
 </body>
 </html>
-
-
-
