--- a/contacto.html
+++ b/contacto.html
@@ -15,30 +15,27 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="vinos.html">Vinos</a></li>
                 <li><a href="historia.html">Historia</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+                <li><a href="preguntas-frecuentes.html">Preguntas</a></li>
             <div id="menu-icon" class="menu-hamburguesa"><i class="fas fa-bars"></i></div>
         </nav>
-                <!-- Menú hamburguesa desplegable -->
-                <div class="menu-desplegable" id="menu-desplegable">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="vinos.html">Vinos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="historia.html">Historia</a></li>
-                    </ul>
     </header>
 
     <main class="todo">
         <section class="info">
             <h1>Contáctanos</h1>
-            <p>Estamos aquí para resolver tus dudas y brindarte la mejor experiencia.</p>
-            <form class="contact-form">
-                <input type="text" placeholder="Nombre">
-                <input type="email" placeholder="Correo">
-                <textarea placeholder="Mensaje"></textarea>
-                <button class="boton" type="submit">Enviar Mensaje</button>
+            <p>Estamos aquí para responder a tus preguntas y ofrecerte una experiencia única en vinos.</p>
+            <form action="#" method="POST">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" required></textarea>
+
+                <button type="submit">Enviar</button>
             </form>
         </section>
     </main>
@@ -70,5 +67,8 @@
             <small>&copy; 2024 <b>Cata & Aroma</b> - Todos los derechos reservados.</small>
         </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
+
+
